# aletheia-back-end

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  filemypy_ini  noxfile.py  project_tree.txt  pyproject.toml  requirements.txt
.github/: auto_dependabot.yml  dependabot.yml
.github/workflows/: auto_dependabot.yml  constraints.txt  deployment.yml  production_deployment.yml  staging_deployment.yml  tests.yml
config/: rag_workflow_config.yml
src/: requirements.txt
src/aletheia_back_end/: app.py  app_settings.py  global_settings.py  untitled.ipynb
src/aletheia_back_end/api/chat/: __init__.py  api.py  dependencies.py  models.py
src/aletheia_back_end/api/files/: __init__.py
src/aletheia_back_end/api/lfc/: __init__.py  api.py  models.py
src/aletheia_back_end/auth/: utils.py
src/aletheia_back_end/config/: consistency_check_workflow_config.yml  fact_check_workflow_config.yml  query_expander_workflow_config.yml  rag_workflow_config.yml
src/aletheia_back_end/middelware/: auth.py
src/aletheia_back_end/modules/: README.md
src/aletheia_back_end/modules/labs_nlp/: azure_client.py  llm_client_interface.py  openai_client.py  query_processor_interface.py  query_rewriter_prompt.txt
src/aletheia_back_end/modules/labs_search/: __init__.py  cosmos_db.py  embeddings.py  models.py  rerank_prompt.txt  reranker_interface.py  retriever_interface.py  vector_store_interface.py
src/aletheia_back_end/modules/workflows/consistency_check/: nodes.py  rag_graph.py  state.py
src/aletheia_back_end/modules/workflows/fact_check/: nodes.py  rag_graph.py  state.py
src/aletheia_back_end/modules/workflows/query_expander/: nodes.py  rag_graph.py  state.py
src/aletheia_back_end/modules/workflows/rag/: nodes.py  rag_graph.py  rag_llm_call_prompt.txt  state.py
src/aletheia_back_end/utils/: config_builders.py  logging_config.py  utils.py
src/ckb_back_end/: __init__.py  app.py  app_settings.py
src/ckb_back_end/api/chat/: api.py
src/ckb_back_end/api/lfc/: api.py
src/ckb_back_end/modules/labs_nlp/: azure_client.py  default_prompt.txt  llm_client_interface.py  openai_client.py  query_processor_interface.py
src/ckb_back_end/modules/labs_search/: cosmos_db.py  embeddings.py  retriever_interface.py
src/ckb_back_end/modules/workflows/consistency_check/: nodes.py  rag_graph.py
src/ckb_back_end/modules/workflows/fact_check/: nodes.py  rag_graph.py
src/ckb_back_end/modules/workflows/rag/: nodes.py  rag_graph.py
src/ckb_back_end/utils/: logging_config.py  utils.py
src/lfc/: app_settings.py  run_transcriber.py  transcriptions_url.txt  untitled.py
src/lfc/Prototype/: plenaire_hall.py
src/lfc/live_transcriber_class/: live_transcriber_interface.py  speechmatics_class.py
src/lfc/utils/: config.py  logging_config.py  utils.py
tests/: __init__.py  test_vector_search.py
tests/api/: test_api.py  test_api_old.py
tests/labs_search/: test_retrieval.py
tests/mock_data/: mock_data.json  mock_data2.json
