[project]
name = "aletheia-stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "speechmatics-batch>=0.2.0",
    "speechmatics-python>=5.0.0",
    "speechmatics-rt>=0.4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
