[tool.poetry]
name = "aletheia-back-end"
version = "0.0.0"
description = "Atheleia Back End"
authors = ["Thaleria Labs <info@thaleria.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/Thaleria_Labs/aletheia-back-end"
repository = "https://github.com/Thaleria_Labs/aletheia-back-end"
documentation = "https://aletheia-back-end.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/Thaleria_Labs/aletheia-back-end/releases"

[tool.poetry.dependencies]
python = "~3.11.4"
fastapi = "^0.115.12"
langchain = "^0.3.25"
uvicorn = "^0.34.3"
azure-cosmos = "^4.9.0"
azure-identity = "^1.23.0"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.21"
openai = "^1.84.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
langchain-azure-ai = "^0.1.4"
langgraph = "^0.6.3"

[tool.poetry.dev-dependencies]
coverage = { extras = ["toml"], version = ">=7.5.4" }
mypy = ">=1.10.1"
pre-commit = ">=3.7.1"
pre-commit-hooks = ">=4.6.0"
pytest = ">=8.2.2"
safety = ">=3.2.4"
typeguard = ">=4.3.0"
ruff = ">=0.5.1"
pydoclint = ">=0.5"

[tool.poetry.scripts]
aletheia-back-end = "aletheia_back_end.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
deptry = "^0.23.0"
nox = "^2025.5.1"
nox-poetry = "^1.2.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["aletheia_back_end"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["langchain.*", "langchain_azure_ai.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    #pyflakes
    "F",
    #isort
    "I",
    #pycodestyle
    "E",
    #docstrings
    "D",
    #pep8-naming
    "N",
    #flake8-bandit
    "S",
    #flake8-bugbear
    "B",
    #pyupgrade
    "UP",
    "B9",
    "C",
    "W",
]
ignore = ["E203", "E501", "D407", "B008",
"D107", # Missing docstring in __init__ (if you're putting it in the class docstring)
    "D104"]# Missing docstring in public package (__init__.py files)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E401", "E402"]
"**/tests/**/*.py" = ["S101"]    # ignores: S101 (assert is fine in tests)
"noxfile.py" = ["S101"] # ignore rule S101 specifically in noxfile.py

[tool.pydoclint]
style = "google"
